UC9 - Group Bogies by Type