@@ -1,36 +1,52 @@
 import java.util.*;
 import java.util.stream.*;
 
-public class TrainConsistManagementApp {
+class Bogie {
+    private String name;
+    private int capacity;
 
-    static class Bogie {
-        String name;
-        int capacity;
-
-        Bogie(String name, int capacity) {
-            this.name = name;
-            this.capacity = capacity;
-        }
-
-        public String toString() {
-            return name + " (" + capacity + ")";
-        }
+    public Bogie(String name, int capacity) {
+        this.name = name;
+        this.capacity = capacity;
     }
 
+    public String getName() {
+        return name;
+    }
+
+    public int getCapacity() {
+        return capacity;
+    }
+}
+
+public class TrainConsistManagementApp {
     public static void main(String[] args) {
 
-        System.out.println("=== UC8: Filter Bogies ===");
+        System.out.println("======================================");
+        System.out.println("UC8 - Filter Passenger Bogies Using Streams");
+        System.out.println("======================================\n");
 
         List<Bogie> bogies = new ArrayList<>();
 
         bogies.add(new Bogie("Sleeper", 72));
-        bogies.add(new Bogie("AC Chair", 60));
-        bogies.add(new Bogie("First Class", 30));
+        bogies.add(new Bogie("AC Chair", 56));
+        bogies.add(new Bogie("First Class", 24));
+        bogies.add(new Bogie("General", 90));
+
+        System.out.println("All Bogies:");
+        for (Bogie b : bogies) {
+            System.out.println(b.getName() + " -> " + b.getCapacity());
+        }
 
         List<Bogie> filtered = bogies.stream()
-                .filter(b -> b.capacity > 60)
-                .toList();
+                .filter(b -> b.getCapacity() > 60)
+                .collect(Collectors.toList());
 
-        System.out.println("Filtered Bogies: " + filtered);
+        System.out.println("\nFiltered Bogies (Capacity > 60):");
+        for (Bogie b : filtered) {
+            System.out.println(b.getName() + " -> " + b.getCapacity());
+        }
+
+        System.out.println("\nUC8 filtering completed...");
     }
 }
